--- a/SobreNosotros.css
+++ b/SobreNosotros.css
@@ -1,7 +1,13 @@
 /* Navbar */
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
 .navbar {
     background-color: #eaeaea;
-    padding: 10px;
+    padding: 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,7 +17,9 @@
 }
 
 .navbar .logo img {
-    height: 40px; /* Más pequeño */
+    height: 50px; /* Más pequeño */
+    width: 50px;
+    border-radius: 50%;
 }
 
 .navbar ul {
@@ -23,15 +31,19 @@
 }
 
 .navbar ul li a {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 20px;
     text-decoration: none;
     color: black;
     font-weight: bold;
     transition: color 0.3s;
-    font-size: 14px; /* Texto más pequeño */
+    font-size: 16px; /* Texto más pequeño */
+    transition: font-size 0.3s ease;
 }
 
 .navbar ul li a:hover {
     color: #6a0dad;
+    font-size: 18px;
 }
 
 /* Contenido principal */
