--- a/faq.css
+++ b/faq.css
@@ -5,15 +5,19 @@ body{
 
 .navbar {
     background-color: #eaeaea;
-    padding: 20px;
+    padding: 13px;
     text-align: right;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
-.navbar .logo{
+.navbar .logo img{
     height: 50px; /* Ajusta la altura del logo */
     width: 50px;
+    border-radius: 50px;
 }
 .navbar ul {
     list-style: none;
@@ -26,12 +30,19 @@ body{
     margin-right: 20px;
 }
 
-.navbar ul li a {
+.navbar ul li a {    
+    font-family: Arial, sans-serif;
     text-decoration: none;
     color: black;
     font-weight: bold;
+    transition: color 0.3s ease;
+    transition: font-size 0.3s ease;
 }
 
+.navbar ul li a:hover {
+    color: #6a0dad;              /* Cambia a morado al pasar el mouse */
+    font-size: 18px;
+}
 
 H1{
     color: rgb(70, 35, 122);
@@ -98,7 +109,8 @@ h5{
     text-align: center;
 }
 button{
-    text-align: center;padding: 10px 20px; /* Tamaño del botón */
+    text-align: center;
+    padding: 10px 20px; /* Tamaño del botón */
     font-size: 15px;
     padding: 15px 40px;
     display: block; /* Convierte el botón en un elemento de bloque */
@@ -112,16 +124,11 @@ button{
 .footer{
     width: 100%;
     display: flex;
+    justify-content: flex-end;
     justify-content: space-around;
     font-family: "Manrope", serif
 }
 
 ol {
     list-style: none;
-}
-div{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    font-family:'Work Sans', sans-serif;
 }
