--- a/styles.css
+++ b/styles.css
@@ -189,13 +189,9 @@ h2{
 
 /* testimonios */
 
-.testimonios-container{
-    z-index: 1;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;    
+.carousel-container{
+    width: 100%;
+    height: 70vh;
     background-image: url(./img/vendedor2.webp);
     background-size: cover;
     background-position: center;
@@ -204,66 +200,84 @@ h2{
     background-size: cover;
 }
 
-/* Carousel */
+.flex{
+    height: 100%;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-.carousel {
+.slide{
     position: relative;
-    width: 80%;
-    height: 75%;
-    margin: 0 auto;
-    overflow: hidden;  /* Esto oculta los items fuera de la vista */
-    
-}
-
-.carousel-container {
-    width: 100%;
-    display: flex;
-    border: solid yellow;        
-    transition: transform 1s ease-in-out;
-
+    border: 1.5px solid yellow;
 }
 
 
 
-.carousel-item {
-    min-width: 100%;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    transition: transform 1s ease-in-out;
-    font-family: work sans;
-    font-weight: 300;
+.slide-info{
+    font-family: "Work Sans", sans-serif;
+    text-align: center;
     font-size: 15px;
+    padding: 5px;
+    width: 1110px;
+    background-color: #467a23;
+    opacity: 0.7;
     line-height: 1.8em;
-    
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 5ms;
 }
 
-.card{
+.slide-info[data-active]{
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 5ms;
+}
+
+.slide-info > p{
+    color: white;
+}
+
+.profile{
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
-.carousel-item img {
-    width: 50px;
-    height: 50px;
+.profile img{
+    height: 60px;
+    width: 60px;
+    margin-right: 10px;
+    border-radius: 50%;
 }
 
-.carousel-btn{
-    position: absolute;
-    background-color: transparent;
+.profile h3{
     color: white;
-    border: solid white;
-    width: 45px;
-    height: 35px;
-    font-size: 25px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 0px;
 }
 
+.profile p{
+    color: yellow;
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 5px;
+} 
+
+.btn{
+    background: none;
+    border: solid white;
+    color: white;
+    padding: 7px 12px;
+    font-size: 20px;
+    cursor: pointer;
+}
+ 
 .btn-left{
     margin-right: 20px;
     top: 45%;
-    right: 75%;
+    left: 75%;
 }
 
 .btn-right{
