--- a/colaboraciones.css
+++ b/colaboraciones.css
@@ -35,18 +35,49 @@ body {
     gap: 20px;
 }
 
+.navbar ul li {
+    display: inline-block;
+    position: relative;
+    margin-right: 20px;
+}
+
 .navbar ul li a {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
     text-decoration: none;
-    color: #000000;
+    color: black;
     font-weight: bold;
     transition: color 0.3s;
     transition: font-size 0.3s ease;
 }
 
 .navbar ul li a:hover {
-    color: #428709; /* Verde oscuro al pasar el mouse */
-    font-size: 20px;
+    color: #428709; 
+    font-size: 18px;
+}
+
+.dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #333;
+    min-width: 250px;
+    display: none;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+}
+
+.dropdown a {
+    padding: 6px 20px;
+    display: block;
+    color: white;
+}
+
+
+        /* Mostrar dropdown cuando el mouse pasa sobre el elemento */
+.navbar ul li:hover .dropdown {
+    background-color: transparent;
+    display: block;
+    border-left: 5px solid 428709;
 }
 
 /* Header principal */
