--- a/contactanos.css
+++ b/contactanos.css
@@ -31,21 +31,50 @@ body {
 }
 
 .navbar ul li {
-    display: inline;
+    display: inline-block;
+    position: relative;
     margin-right: 20px;
 }
 
 .navbar ul li a {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
     text-decoration: none;
     color: black;
     font-weight: bold;
+    transition: color 0.3s;
     transition: font-size 0.3s ease;
 }
 
 .navbar ul li a:hover {
-    color: #6a0dad;
+    color: #6a0dad; 
     font-size: 18px;
 }
+
+.dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #333;
+    min-width: 250px;
+    display: none;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+}
+
+.dropdown a {
+    padding: 6px 20px;
+    display: block;
+    color: white;
+}
+
+
+        /* Mostrar dropdown cuando el mouse pasa sobre el elemento */
+.navbar ul li:hover .dropdown {
+    background-color: transparent;
+    display: block;
+    border-left: 5px solid purple;
+}
+
 
 /* Sección contacto */
 .contact-section {
