--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,8 @@ body{
 }
 
 .navbar ul li {
-    display: inline;
+    display: inline-block;
+    position: relative;
     margin-right: 20px;
 }
 
@@ -44,6 +45,29 @@ body{
     font-size: 18px;
 }
 
+.dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #333;
+    min-width: 250px;
+    display: none;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+}
+
+.dropdown a {
+    padding: 6px 20px;
+    display: block;
+    color: white;
+}
+
+
+        /* Mostrar dropdown cuando el mouse pasa sobre el elemento */
+.navbar ul li:hover .dropdown {
+    background-color: transparent;
+    display: block;
+    border-left: 5px solid purple;
+}
 
 .hero{
     z-index: 1;
