--- a/SobreNosotros.css
+++ b/SobreNosotros.css
@@ -5,47 +5,72 @@ body{
     padding: 0;
 }
 
+
 .navbar {
     background-color: #eaeaea;
     padding: 15px;
+    text-align: right;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
 }
-
 .navbar .logo img {
-    height: 50px; /* Más pequeño */
-    width: 50px;
+    height: 50px;
     border-radius: 50%;
-}
 
+}
 .navbar ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    display: flex;
-    gap: 10px; /* Más compacto */
+}
+
+.navbar ul li {
+    display: inline-block;
+    position: relative;
+    margin-right: 20px;
 }
 
 .navbar ul li a {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-right: 20px;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
     text-decoration: none;
     color: black;
     font-weight: bold;
     transition: color 0.3s;
-    font-size: 16px; /* Texto más pequeño */
     transition: font-size 0.3s ease;
 }
 
 .navbar ul li a:hover {
-    color: #6a0dad;
+    z-index: 1;
+    background-color: #eaeaea;
+    color: #6a0dad; 
     font-size: 18px;
 }
 
+.dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #333;
+    min-width: 250px;
+    display: none;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+}
+
+.dropdown a {
+    padding: 6px 20px;
+    display: block;
+    color: white;
+}
+
+
+        /* Mostrar dropdown cuando el mouse pasa sobre el elemento */
+.navbar ul li:hover .dropdown {
+    background-color: transparent;
+    display: block;
+    border-left: 5px solid purple;
+}
 /* Contenido principal */
 .contenido {
     display: flex;
