--- a/faq.css
+++ b/faq.css
@@ -42,6 +42,8 @@ body{
 }
 
 .navbar ul li a:hover {
+    z-index: 1;
+    background-color: #eaeaea;
     color: #6a0dad; 
     font-size: 18px;
 }
