--- a/styles.css
+++ b/styles.css
@@ -48,10 +48,10 @@ body{
 }
 
 .dropdown {
+    z-index: 5;
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #333;
     min-width: 250px;
     display: none;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
@@ -61,6 +61,7 @@ body{
     padding: 6px 20px;
     display: block;
     color: white;
+    background-color: #eaeaea;
 }
 
 
